# starostka

./: .gitconfig  .gitignore  .gitmodules  .nojekyll  .sops.yaml  BOUNTIES.md  CNAME  Procfile  README.md  _quarto.yml  bootstrap.sh  flake.nix  home.ipynb  index.html  init.ipynb  log.sh  pyproject.toml  readme.md  robots.txt  search.json  set-environment-variables.sh  sitemap.xml  sops.development.env  sops.production.env  sops.staging.env
.deepnote/: id-resolver.json
.github/workflows/: publish.yml
_site/: index.html  search.json
_site/nbs/: 01-api.html  02-visualize.html
api/: bootstrap.sh
apps/: readme.md
apps/data-science-explore/: default.nix  dockerfile
apps/explorer/: 01-explorer.ipynb  02-deepnote-lifecycle.ipynb  sas-connect.ipynb
apps/jupyter-notebook-to-pdf/: convert.sh  readme.md  sample.ipynb
awesome/: awesome.sh  readme.md
cli/: Cargo.toml
cli/src/: main.rs
content/: story.html  story.md
docs/: index.html
nix/: dev.nix
nix/macbook/: home.nix  work.nix
old/shell/: README.md
projects/bevy-dev/: .gitignore  Cargo.toml  init.sh  readme.md
projects/notion-api-test/: README.md  celerybeat-schedule.db  main.py  requirements.txt  tasks.py  updaters.py
projects/stochastic-modelling-and-simulation/: .gitignore  Makefile  README.md  TASKS.md  data.dvc
shell/: Makefile  README.md
shell/editor/: Dockerfile
site_libs/bootstrap/: bootstrap.min.css
starostka/: README.md
starostka-old/: README.md
static-site/: readme.md  stack.yaml  static-site.cabal
system/: core.nix  readme.md
utility/: 01-git-credential-helper.ipynb
(+61 files in other folders)
