[tool.poetry]
name = "starostka-public"
version = "0.1.0"
description = ""
authors = [
    "Benjamin Starostka Jakobsen",
]
packages = [{include = "starostka"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
polars = "^0.16.14"
pandas = "^1.5.3"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
scipy = "^1.10.1"
seaborn = "^0.12.2"
plotly = "^5.13.1"
bokeh = "^3.1.0"
folium = "^0.14.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.11.0"
ipykernel = "^6.22.0"
black = "^23.1.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
